--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Lugares de Villacañas</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Rincones de la localidad toledana que te acercarán a su naturaleza, historia y cultura.">
+	<meta name="keywords" content="villacañas, villacañas toledo, laguna larga, laguna larga villacañas, museo etnográfico del silo, museo del silo, museo etnográfico del silo villacañas, museo del silo villacañas, casa museo de la tía sandalia, museo de la tía sandalia, casa museo de la tía sandalia villacañas, museo de la tía sandalia villacañas">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
